--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Averia+Libre:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import "tailwindcss";
 
+html {
+	font-size: 12px;
+}
+
 @theme {
 	--default-font-family: "Averia Libre", monospace;
 }
