--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Averia+Libre:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import "tailwindcss";
 
-html {
-	font-size: 12px;
-}
-
 @theme {
 	--default-font-family: "Averia Libre", monospace;
-}
-
-::view-transition-old(.slide-in) {
-	animation-name: slideInFromTopRight;
-	animation-duration: 200ms;
-	animation-timing-function: ease-in-out;
-}
-
-::view-transition-new(.slide-in) {
-	animation-name: slideInFromTopRight;
-	animation-duration: 200ms;
-	animation-timing-function: ease-in-out;
-}
-
-::view-transition-old(.slide-out) {
-	animation-name: slideOutToTopRight;
-	animation-duration: 200ms;
-	animation-timing-function: ease-in-out;
-}
-
-::view-transition-new(.slide-out) {
-	animation-name: slideInFromTopRight;
-	animation-duration: 200ms;
-	animation-timing-function: ease-in-out;
 }
 
 @keyframes slideOutToTopRight {
@@ -49,4 +21,16 @@ html {
 	to {
 		transform: translate(0, 0);
 	}
+}
+
+::view-transition-new(.corner-slide-in-out) {
+	animation-name: slideInFromTopRight;
+	animation-duration: 200ms;
+	animation-timing-function: ease-in-out;
+}
+
+::view-transition-old(.corner-slide-in-out) {
+	animation-name: slideOutToTopRight;
+	animation-duration: 200ms;
+	animation-timing-function: ease-in-out;
 }
